images upload fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
     <div class="slider">
       <div class="slider-titles">
         <div class="title"><h1>1. Heading goes here</h1></div>
@@ -21,12 +20,37 @@
         <div class="title"><h1>9. Heading goes here</h1></div>
       </div>
       <div class="slider-images">
-        <div class="img-top"></div>
-        <div class="img-bottom"></div>
+        <div class="top-images">
+          <img src="/images/img1.jpg" alt="" />
+          <img src="/images/img2.jpg" alt="" />
+          <img src="/images/img3.jpg" alt="" />
+          <img src="/images/img4.jpg" alt="" />
+          <img src="/images/img5.jpg" alt="" />
+          <img src="/images/img6.jpg" alt="" />
+          <img src="/images/img7.jpg" alt="" />
+          <img src="/images/img8.jpg" alt="" />
+          <img src="/images/img9.jpg" alt="" />
+        </div>
+        <div class="bottom-images">
+          <img src="/images/img1.jpg" alt="" />
+          <img src="/images/img2.jpg" alt="" />
+          <img src="/images/img3.jpg" alt="" />
+          <img src="/images/img4.jpg" alt="" />
+          <img src="/images/img5.jpg" alt="" />
+          <img src="/images/img6.jpg" alt="" />
+          <img src="/images/img7.jpg" alt="" />
+          <img src="/images/img8.jpg" alt="" />
+          <img src="/images/img9.jpg" alt="" />
+        </div>
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
